Fixed challenge rendering on tablet, used position: relative;

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -359,15 +359,18 @@ body {
 
 .col-lg-offset-problem-1 {
     margin-left: 4.6%;
+    position: relative;
 }
 
 .col-lg-offset-problem-2 {
     margin-left: 4.2%;
     margin-right: 4.5%;
+    position: relative;
 }
 
 .col-lg-offset-problem-3 {
     margin-right: 5%;
+    position: relative;
 }
 
 .bg-white {
